# spellbit

./: CMakeLists.txt  LICENSE  LICENSE_THIRD_PARTY.md  README.md  conanfile.txt
cli/: main.cpp
core/: count_min_sketch.cpp  helpers.cpp  tokenizer.cpp  trainer.cpp
include/spellbit/: count_min_sketch.hpp  helpers.hpp  tokenizer.hpp  trainer.hpp
src/: helpers.cpp
tests/: test_helpers.cpp  test_runner.cpp
